--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "files.associations": {
-        "iostream": "cpp"
+        "*.pro": "prolog",
+        "iostream": "cpp",
+        "iosfwd": "cpp",
+        "fstream": "cpp",
+        "*.tcc": "cpp",
+        "list": "cpp"
     },
     "workbench.colorTheme": "Monokai"
 }
